fixed typo in hw

--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9be227b13e08f6feaf9e27f94d9e5ff5ccb2ee913f164c991b8fb4adb8a8822b"
+  "signature": "sha256:f5d7a9adeb0ba0be14953931df5777bcb6dc3cca9d8735c506517ea0007a7c0a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -457,7 +457,7 @@
       "This problem explores the practical problems in estimating the mean and volatility from the stock price time series. We assume that stock prices follow Geometric Brownian motion, thus their log returns are normally distributed. It is common practice to estimate the mean and variance of the log returns $r(t; \\Delta) = \\log\\left(\\frac{s(t+\\Delta)}{s(t)}\\right)$ from historical data, where $\\Delta$ is the period of returns. Suppose we are interested in estimating the annualized returns with $\\Delta = 1$, and we have more frequent data samples of $\\delta < \\Delta$ (such as daily data, $\\delta = 1/250$), then we could estimate annualized return mean and variance using the more frequent observations as:\n",
       "\n",
       "$$ \\mathbb{E}[r(t; \\Delta)] = \\frac{\\Delta}{\\delta} \\mathbb{E}[r(t; \\delta)] \\approx \\frac{\\Delta}{\\delta} \\frac{1}{n}\\sum_{k=0}^{n-1} r(t + k\\delta; \\delta) := \\frac{\\Delta}{\\delta} \\mu $$\n",
-      "$$ \\sigma^2\\left(r(t; \\Delta)\\right) = \\frac{\\Delta}{\\delta} \\sigma^2\\left(r(t; \\delta)\\right) \\approx \\frac{\\Delta}{\\delta} \\frac{1}{n-1} \\left(\\sum_{k=0}^{n-1}  r^2(t + k\\delta; \\delta) - \\mu^2 \\right)$$\n",
+      "$$ \\sigma^2\\left(r(t; \\Delta)\\right) = \\frac{\\Delta}{\\delta} \\sigma^2\\left(r(t; \\delta)\\right) \\approx \\frac{\\Delta}{\\delta} \\frac{1}{n-1} \\sum_{k=0}^{n-1}  \\left(r(t + k\\delta; \\delta) - \\mu\\right)^2$$\n",
       "\n",
       "where $\\mu$ is the average daily historical log returns. These expressions directly follow the Geometric Brownian motions. For the following questions, assume that we estimate expected returns by averaging the log returns over consecutive, non-overlapping windows. \n",
       "\n",
