an error in orthogonal transformation slide

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:514c74701e83ab179d5b91311bf035b1409924bc87b29edcc7aa11e0145fa355"
+  "signature": "sha256:055bcd8f50e62c5c8e5ce5a42cbb2e09389a904d8038aecf398a01bc003ee618"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2404,8 +2404,8 @@
       "\n",
       "Orthogonal transformation is **unconditionally stable**:\n",
       " \n",
-      "$$\\Vert Q \\boldsymbol u\\Vert_2 = (Q \\boldsymbol u)^T(Q \\boldsymbol u) \n",
-      "= \\boldsymbol u^T Q^TQ \\boldsymbol u = \\boldsymbol u^T \\boldsymbol u =  \\Vert \\boldsymbol u \\Vert_2$$\n",
+      "$$\\Vert Q \\boldsymbol u\\Vert_2^2 = (Q \\boldsymbol u)^T(Q \\boldsymbol u) \n",
+      "= \\boldsymbol u^T Q^TQ \\boldsymbol u = \\boldsymbol u^T \\boldsymbol u =  \\Vert \\boldsymbol u \\Vert_2^2$$\n",
       " \n",
       "* therefore by definition: $\\Vert Q \\Vert_2 = \\Vert Q^{-1} \\Vert_2 = 1$\n",
       "* $k(Q) = \\Vert Q \\Vert_2 \\Vert Q^{-1} \\Vert_2 = 1$\n",
