lecture 1 exp(x) rewording

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:2d6d7a4799bccbce6d42a0a0616a0609a8dcc986cf95460c015837b86971c9aa"
+  "signature": "sha256:7a67a105256c4054411ef3f4629d92b71af69f30bc7fcf1d11662f7ca012c9c0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1506,11 +1506,13 @@
       }
      },
      "source": [
-      "## A more realistic example \n",
+      "## Unexpected twist\n",
       "\n",
-      "* compute $e^x$ via Taylor expansion: \n",
+      "Compute $e^x$ via Taylor expansion: \n",
       "\n",
-      "$$e^x = \\sum_{n=0}^{\\infty}\\frac{x^n}{n!} = 1 + x + \\frac{1}{2}x^2 + ...$$"
+      "$$e^x = \\sum_{n=0}^{\\infty}\\frac{x^n}{n!} = 1 + x + \\frac{1}{2}x^2 + ...$$\n",
+      "\n",
+      "Other types of numerical error may disguise as floating point rounding error, thus hard to detect:"
      ]
     },
     {
