--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:055bcd8f50e62c5c8e5ce5a42cbb2e09389a904d8038aecf398a01bc003ee618"
+  "signature": "sha256:7036199f9524bc4d3e65e345dd85c9ac36b82bc112be54c0740eb94239dbb28d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2430,7 +2430,8 @@
       "Homework:\n",
       "\n",
       "* Bindel and Goodman: Problem 4.4, 4.7, 4.8\n",
-      "* Complete [homework set 2](http://yadongli.github.io/nyumath2048)"
+      "* Complete [homework set 2](http://yadongli.github.io/nyumath2048)\n",
+      "* Problem 2, 4, 5 in the homework set and 4.4, 4.7 from the book are optional."
      ]
     }
    ],
