--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f5d7a9adeb0ba0be14953931df5777bcb6dc3cca9d8735c506517ea0007a7c0a"
+  "signature": "sha256:0db9ae02b515a05b9b2865800082c3aca1d0bff8645be88078830379d88aa469"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -70,7 +70,7 @@
       "\n",
       "Implement the recursive cholesky decomposition algorithm discussed in the class in Python, with the following requirements:\n",
       "\n",
-      "1. use vector/matrix calculation whenever possible, but you obviously should not just call the buildin numpy/scipy functions for sholesky decomposition \n",
+      "1. use vector/matrix calculation whenever possible, but you obviously should not just call the buildin numpy/scipy functions for Cholesky decomposition \n",
       "2. detect and throw exception if the input matrix is not semi-positive definite\n",
       "3. test your program against the version provided in scipy.linalg, and compare their performance\n",
       "\n",
