fixed typo, extra credit to Xiashuai Huang

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -205,7 +205,7 @@
       "\n",
       "$$\\begin{array}\n",
       "\\\\ \\bs u = A \\bs v &\\iff u_i = \\sum_{j=1}^{n} a_{ij}v_j \\\\\n",
-      "C = AB &\\iff c_{ik} = \\sum_{k=1}^{n} a_{ik}b_{kj} = a_i \\cdot b_j\n",
+      "C = AB &\\iff c_{ij} = \\sum_{k=1}^{n} a_{ik}b_{kj} = a_i \\cdot b_j\n",
       "\\end{array}$$"
      ]
     },
