--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:017da6df2f7fa07b646912a39ee55f1e2ecaf25dfcaeea9c364c66dc5bec2d1e"
+  "signature": "sha256:55ef45f01aa1f2336d6635cda05985dd6581375697881bd789a5efa4ab5c463c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1936,7 +1936,7 @@
       "| Decomposition | Applicability | Formula | Results | Applications |\n",
       "| :---: | :---: | :---: | :---: | \n",
       "| LU | square, full rank | $A = LU$ | lower, upper triangluar | matrix inversion |\n",
-      "| Cholesky | symmetric positive definite | $A = LL^T$ | lower triangular | simulated correlated factors |\n",
+      "| Cholesky | symmetric positive definite | $A = LL^T$ | lower triangular | simulate correlated factors |\n",
       "| QR | any | $A = Q R$ | orthogonal, upper triangular | solve eigen values, least square|\n",
       "| EVD | symmetric | $A = R\\Lambda R^T$ | orthogonal, real diagonal | PCA |\n",
       "| SVD | any | $A = U\\Sigma V^T$ | orthogonal, positive diagonal, orthogonal | error analysis |\n"
@@ -1964,6 +1964,14 @@
       "\n",
       "* [Homework set 3](http://yadongli.github.io/nyumath2048/)"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
