--- a/Homework3.ipynb
+++ b/Homework3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a16dfdac98ada0c5f6f66f50213dd55f1db83633159336e5a09fb1bedb011f4c"
+  "signature": "sha256:395f81c592805dce4cdc8eac0996df46346a223d630713949d81b55934dd58e1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -65,9 +65,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The following problems use the same CMT treasury data set from the class, which can be found (in CSV format) ata:\n",
-      "\n",
-      "https://raw.githubusercontent.com/yadongli/numfin/master/cmt.csv"
+      "The following problems use the same CMT treasury data set from the class:"
      ]
     },
     {
