--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:5b6ce4561b836001af5259c884329c6870e22a63735b0f5c2588cf5abb44bfb5"
+  "signature": "sha256:16e5b6bae6bca02a17047585b2cf1f667c3ded6df973f5fa0779b39104dd8558"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1746,7 +1746,7 @@
       "| | $M$ | $U$ | $\\Sigma$ | $V$ |\n",
       "| :---: | :---: | :----: | :----: | :---: |\n",
       "| Name | Original Matrix | Left singular vector | Singular value | Right singular vector |\n",
-      "| Type |  Real | Orthogonal, real | Diagonal, real | Orthogonal, real |\n",
+      "| Type |  Real | Orthogonal, real | Diagonal, positive | Orthogonal, real |\n",
       "| Size | $m \\times n$ | $m\\times m$ | $m\\times n$ | $n \\times n$ |\n",
       "\n",
       "* For matrix $M$, there can only be $\\min(m, n)$ singular values at most\n",
