--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:16e5b6bae6bca02a17047585b2cf1f667c3ded6df973f5fa0779b39104dd8558"
+  "signature": "sha256:d270bde225ed2cf25de18695b9a0d79994dc2b5d2b4d42863b54429f3b8e5977"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -646,11 +646,11 @@
       "\n",
       "$$ H = I - \\frac{2\\bs{uu}^T}{\\bs {(u^T u)^2}}$$\n",
       "\n",
-      "* Household transformation can reflect an arbitrary vector $\\bs x$ to $ \\Vert \\bs x \\Vert_2 \\bs e_1$, where $\\bs e_1$ can be any vector. \n",
+      "* Household transformation can reflect an arbitrary vector $\\bs x$ to $ \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$, where $\\hat{\\bs e}_1$ can be any unit vector. \n",
       "\n",
       "<center><img src = \"img/householder.png\" height=300 width=300></center>\n",
       "\n",
-      "* It is obvious from the figure that: $\\bs u = \\bs x - \\Vert \\bs x \\Vert_2 \\bs e_1$."
+      "* It is obvious from the figure that: $\\bs u = \\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$."
      ]
     },
     {
@@ -684,14 +684,15 @@
       "    h[e:,e:] = hs\n",
       "    return h\n",
       "\n",
-      "x, u, Q, R = sp.symbols(\"x, u, Q, R\")\n",
+      "x, u, e1, Q, R = sp.symbols(\"x, u, e_1, Q, R\")\n",
       "xn = sp.symbols(\"\\Vert{x}\\Vert_2\")\n",
       "b = a[:, 0]\n",
       "c = np.zeros(len(b))\n",
       "c[0] = np.linalg.norm(b, 2)\n",
       "\n",
       "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(np.round(a))), fmt.joinMath('=', x, sp.Matrix(a[:,0])), \n",
-      "                fmt.joinMath('=', xn, np.round(np.linalg.norm(b, 2), 2)),\n",
+      "                fmt.joinMath('=', xn, np.round(np.linalg.norm(b, 2), 3)),\n",
+      "                fmt.joinMath('=', e1, sp.Matrix([1, 0, 0, 0])),\n",
       "                fmt.joinMath('=', u, sp.Matrix(a[:,0]-c).evalf(3)), pre=\"\\small \")\n",
       "\n",
       "fmt.displayMath(\"\\;\")\n",
@@ -707,12 +708,12 @@
      "outputs": [
       {
        "latex": [
-        "$$\\small A=\\left(\\begin{matrix}5 & 4 & -3 & 2\\\\4 & 4 & 2 & -1\\\\-3 & 2 & 3 & 0\\\\2 & -1 & 0 & -2\\end{matrix}\\right)\\;,\\;\\;\\;x=\\left(\\begin{matrix}5\\\\4\\\\-3\\\\2\\end{matrix}\\right)\\;,\\;\\;\\;\\Vert{x}\\Vert_{2}=7.35\\;,\\;\\;\\;u=\\left(\\begin{matrix}-2.35\\\\4.0\\\\-3.0\\\\2.0\\end{matrix}\\right)$$"
+        "$$\\small A=\\left(\\begin{matrix}5 & 4 & -3 & 2\\\\4 & 4 & 2 & -1\\\\-3 & 2 & 3 & 0\\\\2 & -1 & 0 & -2\\end{matrix}\\right)\\;,\\;\\;\\;x=\\left(\\begin{matrix}5\\\\4\\\\-3\\\\2\\end{matrix}\\right)\\;,\\;\\;\\;\\Vert{x}\\Vert_{2}=7.348\\;,\\;\\;\\;e_{1}=\\left(\\begin{matrix}1\\\\0\\\\0\\\\0\\end{matrix}\\right)\\;,\\;\\;\\;u=\\left(\\begin{matrix}-2.35\\\\4.0\\\\-3.0\\\\2.0\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xca4f5c0>"
+        "<IPython.core.display.Math at 0xa11bb70>"
        ]
       },
       {
@@ -722,7 +723,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xcbf20b8>"
+        "<IPython.core.display.Math at 0xa141780>"
        ]
       },
       {
@@ -732,11 +733,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa141e80>"
+        "<IPython.core.display.Math at 0xa11b208>"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
@@ -872,6 +873,41 @@
       "$$\n",
       "\n",
       "therefore, the solution is the $\\bs \\beta$ that zero out the first $n$ elements of the vector."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Top 10 numerical algorithm in the 20th century\n",
+      "\n",
+      "By [SIAM](https://www.siam.org/pdf/news/637.pdf):\n",
+      "1. 1946, Monte Carlo\n",
+      "2. 1947, Simplex method for linear programming\n",
+      "3. 1950, Subspace iteration/conjugate gradient method for solving $A\\bs x = \\bs y$\n",
+      "4. 1951, LU decomposition\n",
+      "5. 1957, Fortran optimized compiler\n",
+      "6. 1959-1961, QR decomposition/algorithm\n",
+      "7. 1963, quicksort\n",
+      "8. 1965, fast fourier transform\n",
+      "9. 1977, integer relation detection algoirthm\n",
+      "10. 1987, fast multipole algorithm"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "Why single out the 20th century?"
      ]
     },
     {
