--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d270bde225ed2cf25de18695b9a0d79994dc2b5d2b4d42863b54429f3b8e5977"
+  "signature": "sha256:17c68d054ce7db8df9fb4927492b88de4f1db5cabfb81ed061d0c6d00af50794"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -888,10 +888,10 @@
       "By [SIAM](https://www.siam.org/pdf/news/637.pdf):\n",
       "1. 1946, Monte Carlo\n",
       "2. 1947, Simplex method for linear programming\n",
-      "3. 1950, Subspace iteration/conjugate gradient method for solving $A\\bs x = \\bs y$\n",
+      "3. 1950, Subspace iteration for solving $A\\bs x = \\bs y$\n",
       "4. 1951, LU decomposition\n",
       "5. 1957, Fortran optimized compiler\n",
-      "6. 1959-1961, QR decomposition/algorithm\n",
+      "6. 1959-1961, QR decomposition/QR algorithm\n",
       "7. 1963, quicksort\n",
       "8. 1965, fast fourier transform\n",
       "9. 1977, integer relation detection algoirthm\n",
@@ -899,13 +899,8 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
       "Why single out the 20th century?"
      ]
