--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:17c68d054ce7db8df9fb4927492b88de4f1db5cabfb81ed061d0c6d00af50794"
+  "signature": "sha256:1209b0e0b43501f3027e88aff1a2dbdc6ffe2d5d07e74df7be346a66c53cfec6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1816,7 +1816,7 @@
       "\n",
       "SVD and eigenvalue decomposition (EVD) are closely related to each other:\n",
       "\n",
-      "* SVD reduces to EVD if $M$ is SPD matrix\n",
+      "* SVD reduces to EVD if $M$ is symmetric positive definite\n",
       "* $MM^T = U \\Sigma V^T V \\Sigma^T U^T = U \\Sigma \\Sigma^T U^T$:\n",
       "  * the column vectors of $U$ are the eigen vectors of $MM^T$\n",
       "* $M^TM = V\\Sigma^TU^TU\\Sigma V^T = V \\Sigma\\Sigma^T V^T$: \n",
@@ -1972,13 +1972,13 @@
       " \n",
       "For real matrix $A$:\n",
       " \n",
-      "| Decomposition | Applicability | Formula | Results | Applications |\n",
+      "| Decomposition | Applicability | Formula | Results | Key applications |\n",
       "| :---: | :---: | :---: | :---: | \n",
       "| LU | square, full rank | $A = LU$ | lower, upper triangluar | matrix inversion |\n",
       "| Cholesky | symmetric positive definite | $A = LL^T$ | lower triangular | simulate correlated factors |\n",
       "| QR | any | $A = Q R$ | orthogonal, upper triangular | solve eigen values, least square|\n",
       "| EVD | symmetric | $A = R\\Lambda R^T$ | orthogonal, real diagonal | PCA |\n",
-      "| SVD | any | $A = U\\Sigma V^T$ | orthogonal, positive diagonal, orthogonal | error analysis |\n"
+      "| SVD | any | $A = U\\Sigma V^T$ | orthogonal, positive diagonal, orthogonal | error analysis, rank reduction |\n"
      ]
     },
     {
