more hints in hw

--- a/Homework3.ipynb
+++ b/Homework3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6e9e0670209dab606df03fdb21991bf9644e7f10b3e62c93620ec78a479e902f"
+  "signature": "sha256:62a78312ff093bdca5fad6e2575025339dd5fed8cc5033dbe0d1f5d5d084eca2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -112,7 +112,8 @@
       "\n",
       "Hints:\n",
       "* numpy has a build in random number generator package, numpy.random.\n",
-      "* cumsum, percentile are useful functions from numpy, you can use them to simplify your code"
+      "* cumsum, percentile are useful functions from numpy, you can use them to simplify your code\n",
+      "* for step 4, since the principal components are orthogonal, you can simply drive the change simulation using independent normal random numbers. Don't forget to take into account the eigen values in your simulation, i.e., the eigen values are the variance along the direction of the principal components."
      ]
     },
     {
