--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:1209b0e0b43501f3027e88aff1a2dbdc6ffe2d5d07e74df7be346a66c53cfec6"
+  "signature": "sha256:d7c63eb6389d1b2b912480b1547bc738a083a9dc5c52e8e4f3fee823271644f4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,17 +55,9 @@
        "text": [
         "Populating the interactive namespace from numpy and matplotlib\n"
        ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING: pylab import has clobbered these variables: ['rc', 'beta', 'cov']\n",
-        "`%matplotlib` prevents importing * from pylab and numpy\n"
-       ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -235,17 +227,17 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>Least square</th>\n",
-        "      <td>-842.3</td>\n",
-        "      <td>844.2</td>\n",
-        "      <td>5.008</td>\n",
-        "      <td>70.38</td>\n",
+        "      <td>-1,061</td>\n",
+        "      <td>1,063</td>\n",
+        "      <td>4.989</td>\n",
+        "      <td>69.22</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>Ridge regression $\\lambda=0.1$</th>\n",
-        "      <td>0.7935</td>\n",
-        "      <td>1.203</td>\n",
-        "      <td>5.008</td>\n",
-        "      <td>70.62</td>\n",
+        "      <td>0.7266</td>\n",
+        "      <td>1.252</td>\n",
+        "      <td>4.989</td>\n",
+        "      <td>69.62</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table></font></center>"
@@ -253,11 +245,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0xcbf6940>"
+        "<IPython.core.display.HTML at 0x9c07c88>"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -386,10 +378,10 @@
       "If $A$ is real and symmetric: $A^* = A$:\n",
       "\n",
       "* $\\Lambda^* = \\Lambda$: all eigenvalues are real\n",
-      "* we can consider real eigen vectors only without losing generality (why?)\n",
+      "* we can consider real eigen vectors only without losing generaliy\n",
       "* $R$ is orthogonal: $(R^{-1})^* = (R^{-1})^T = R \\iff RR^T = I$\n",
       "* $A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
-      "* all eigenvalues are positive if and only if $A$ is symmetric positive definite"
+      "* all eigenvalues are positive if and only if $A$ is SPD"
      ]
     },
     {
@@ -414,7 +406,7 @@
       "\\end{array}$$\n",
       "\n",
       "* the solution must be an eigenvector \n",
-      "* note that $\\bs v_i^T A \\bs v_i = \\lambda_i$, therefore $\\bs v_1$ is the solution because $\\lambda_1$ is the largest\n",
+      "* since $\\bs v_i^T A \\bs v_i = \\lambda_i$, $\\bs v_1$ is the solution because $\\lambda_1$ is the largest\n",
       "\n",
       "This process can be repeated to find all eigenvalues and vectors:\n",
       "\n",
@@ -533,7 +525,7 @@
       "Q = sp.MatrixSymbol('Q_0', 4, 4)\n",
       "R = sp.MatrixSymbol('R_0', 4, 4)\n",
       "\n",
-      "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(a)), pre=\"\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(a)), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -549,11 +541,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xcbf80f0>"
+        "<IPython.core.display.Math at 0x9c58b00>"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -567,7 +559,7 @@
      "collapsed": false,
      "input": [
       "q, r = np.linalg.qr(a)\n",
-      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(q).evalf(3)), fmt.joinMath('=', R, sp.Matrix(r).evalf(3)), pre=\"\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(q).evalf(3)), fmt.joinMath('=', R, sp.Matrix(r).evalf(3)), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -583,17 +575,17 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xcbf7358>"
+        "<IPython.core.display.Math at 0x9c4d6d8>"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "subslide"
       }
      },
      "source": [
@@ -610,12 +602,12 @@
       "    d = qr_next(d)\n",
       "    \n",
       "An = sp.MatrixSymbol('A_%d' % ii, 4, 4)\n",
-      "fmt.displayMath(fmt.joinMath('=', A1, sp.Matrix(r.dot(q)).evalf(3)), fmt.joinMath('=', An, sp.Matrix(np.round(d, 3))), pre=\"\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', A1, sp.Matrix(r.dot(q)).evalf(3)), fmt.joinMath('=', An, sp.Matrix(np.round(d, 3))), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -626,11 +618,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa9468d0>"
+        "<IPython.core.display.Math at 0x1d5f9b0>"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -693,7 +685,7 @@
       "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(np.round(a))), fmt.joinMath('=', x, sp.Matrix(a[:,0])), \n",
       "                fmt.joinMath('=', xn, np.round(np.linalg.norm(b, 2), 3)),\n",
       "                fmt.joinMath('=', e1, sp.Matrix([1, 0, 0, 0])),\n",
-      "                fmt.joinMath('=', u, sp.Matrix(a[:,0]-c).evalf(3)), pre=\"\\small \")\n",
+      "                fmt.joinMath('=', u, sp.Matrix(a[:,0]-c).evalf(3)), pre=\"\\\\small \")\n",
       "\n",
       "fmt.displayMath(\"\\;\")\n",
       "    \n",
@@ -701,7 +693,7 @@
       "H1 = sp.MatrixSymbol('H_1', 4, 4)\n",
       "a1 = h1.dot(a)\n",
       "fmt.displayMath(fmt.joinMath('=', H1, sp.Matrix(np.round(h1, 3))), \n",
-      "                fmt.joinMath('=', H1*A, sp.Matrix(np.round(a1, 3))), pre=\"\\small \")"
+      "                fmt.joinMath('=', H1*A, sp.Matrix(np.round(a1, 3))), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {},
@@ -713,7 +705,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa11bb70>"
+        "<IPython.core.display.Math at 0x9ccb320>"
        ]
       },
       {
@@ -723,7 +715,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa141780>"
+        "<IPython.core.display.Math at 0x9da2be0>"
        ]
       },
       {
@@ -733,11 +725,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa11b208>"
+        "<IPython.core.display.Math at 0x9c4d6a0>"
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -758,14 +750,14 @@
       "H2 = sp.MatrixSymbol('H_2', 4, 4)\n",
       "a2 = h2.dot(a1)\n",
       "fmt.displayMath(fmt.joinMath('=', H2, sp.Matrix(np.round(h2, 3))), \n",
-      "                fmt.joinMath('=', H2*H1*A, sp.Matrix(np.round(a2, 3))), pre=\"\\small \")\n",
+      "                fmt.joinMath('=', H2*H1*A, sp.Matrix(np.round(a2, 3))), pre=\"\\\\small \")\n",
       "fmt.displayMath(\"\\;\")\n",
       "\n",
       "h3 = householder(a2[:, 2], 2)\n",
       "H3 = sp.MatrixSymbol('H_3', 4, 4)\n",
       "a3 = h3.dot(a2)\n",
       "fmt.displayMath(fmt.joinMath('=', H3, sp.Matrix(np.round(h3, 3))), \n",
-      "                fmt.joinMath('=', H3*H2*H1*A, sp.Matrix(np.round(a3, 3))), pre=\"\\small \")"
+      "                fmt.joinMath('=', H3*H2*H1*A, sp.Matrix(np.round(a3, 3))), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {},
@@ -777,7 +769,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xcbf6e80>"
+        "<IPython.core.display.Math at 0x9e14e10>"
        ]
       },
       {
@@ -787,7 +779,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa43e390>"
+        "<IPython.core.display.Math at 0x9e14c88>"
        ]
       },
       {
@@ -797,11 +789,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa5eae48>"
+        "<IPython.core.display.Math at 0x9e13470>"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -818,7 +810,7 @@
       "r = q.T.dot(a)\n",
       "np.round(q.dot(r), 4)\n",
       "\n",
-      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(np.round(q, 3))), fmt.joinMath('=', R, sp.Matrix(np.round(r, 3))), pre=\"\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(np.round(q, 3))), fmt.joinMath('=', R, sp.Matrix(np.round(r, 3))), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {},
@@ -830,11 +822,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xcbfc400>"
+        "<IPython.core.display.Math at 0x9da2c88>"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -854,7 +846,7 @@
       "\n",
       "note that $R$ is right trangular, the vector whose norm is to be minimized looks like:\n",
       "\n",
-      "$$\\begin{pmatrix}\n",
+      "$$\\small \\begin{pmatrix}\n",
       "r_{11} & r_{12} & \\cdots & r_{1n} \\\\\n",
       "0 & r_{22} & \\cdots & r_{2n} \\\\\n",
       "\\vdots & \\ddots & \\ddots & \\vdots \\\\\n",
@@ -1347,7 +1339,7 @@
       "\n",
       "The eigenvectors and percentage explained, \n",
       "\n",
-      "* the first principal component explains more than 95% of the variance in CMT rates.\n",
+      "* the first principal component explains more than 95% of the variance\n",
       "* the first 3 principal components can be interpreted as level, slope and curvature of the curve\n",
       "* note that the sign of the PC is insignificant"
      ]
@@ -1840,7 +1832,7 @@
       "\n",
       "where $\\Sigma^+$ is the pseudo inverse of $\\Sigma$, whose diagonal elements are the reciprocals of those in $\\Sigma$.\n",
       "\n",
-      "It is easy to prove by direct computation, the last equation is obviously true, and every step is reversible:\n",
+      "Proof: the last equation is obviously true, and every step is reversible:\n",
       "\n",
       "$$\\begin{array}&(X^TX)^{-1}X^T &= V\\Sigma^+ U^T \\\\\n",
       "(V \\Sigma^T \\Sigma V^T)^{-1} V\\Sigma^TU^T &= V\\Sigma^+ U^T \\\\\n",
