--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:7a67a105256c4054411ef3f4629d92b71af69f30bc7fcf1d11662f7ca012c9c0"
+  "signature": "sha256:7e20278ddb413276ae6635b4611f0421f29326fbce91a8af567b389e9532b8f6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -984,7 +984,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -1033,7 +1033,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "subslide"
       }
      },
      "outputs": [
@@ -1082,7 +1082,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "outputs": [
@@ -1509,10 +1509,8 @@
       "## Unexpected twist\n",
       "\n",
       "Compute $e^x$ via Taylor expansion: \n",
-      "\n",
       "$$e^x = \\sum_{n=0}^{\\infty}\\frac{x^n}{n!} = 1 + x + \\frac{1}{2}x^2 + ...$$\n",
-      "\n",
-      "Other types of numerical error may disguise as floating point rounding error, thus hard to detect:"
+      "Other types of errors may be mistaken as floating point rounding error:"
      ]
     },
     {
@@ -1520,7 +1518,7 @@
      "collapsed": false,
      "input": [
       "import math\n",
-      "\n",
+      "ay \n",
       "def exp_taylor(x, n) :\n",
       "    return sum([1.*x**i/math.factorial(i) for i in np.arange(1, n)]) + 1.\n",
       "\n",
@@ -1881,8 +1879,8 @@
       "\n",
       "The Mandelbrot set is a famous example:\n",
       "\n",
-      "* defined using an iterative algorithm in complex number: $z_{i+1} = z_i^2 + c$\n",
-      "* the color of $z_0$ is assigned as how many iterations for $|z_i|$ to go above a threshold\n",
+      "* defined an iterative algorithm in complex number: $z_{i+1} = z_i^2 + c$\n",
+      "* the color of $z_0$ is tied to the number of iterations for $|z_i|$ to go above a threshold\n",
       "* obviously unstable because of the iterative additions\n",
       "* showing exquisite details of numerical instability"
      ]
@@ -1891,7 +1889,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src = \"img/mandelbrot.jpg\", height = 500, width = 500></center>"
+      "<center><img src = \"img/mandelbrot.jpg\", height = 400, width = 400></center>"
      ]
     },
     {
