--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:7e20278ddb413276ae6635b4611f0421f29326fbce91a8af567b389e9532b8f6"
+  "signature": "sha256:adc12c654d2371a3124b1c795ec1dff7f24d529d4859815937f6ac83410f86a3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -596,7 +596,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "subslide"
+       "slide_type": "fragment"
       }
      },
      "source": [
@@ -612,7 +612,17 @@
       "    * e.g., round to 4 significant digit: $3.1245 \\rightarrow 3.124, 43515 \\rightarrow 43520$ \n",
       "  * addition and multiplication are still commutative, but not associative\n",
       "  * intermediate calculations could be done at higher precision to minimize rounding error\n",
-      "    * e.g. Intel CPU's FPU uses 80bit representation for intermediate calculation\n",
+      "    * e.g. Intel CPU's FPU uses 80bit representation for intermediate calculation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "* basic operations\n",
       "  * arithmetic: add, multiplication, sqrt etc\n",
       "  * conversion: btw formats, to/from string etc\n",
@@ -638,9 +648,18 @@
       "  * many of them do not make sense in a strict mathematical sense\n",
       "  * but they are necessary evils for the greater goods\n",
       "* it establishes a clear interface for hardware designers and software developers\n",
-      "* its main designer, William Kahan won the Turing award in 1989\n",
-      "\n",
-      "The standard is widely implemented in modern hardware and software,\n",
+      "* its main designer, William Kahan won the Turing award in 1989"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "The IEEE 754 standard is widely implemented in modern hardware and software,\n",
       "\n",
       "* 99% of the CPU are at least 99% IEEE 754 compliant\n",
       "* the OS/software situation is more complicated  \n",
@@ -672,8 +691,8 @@
       "| IEEE 754 - 32 bit | 1    |      24     |   8      |  127 |\n",
       "| IEEE 754 - 64 bit | 1    |      53     |   11     | 1023 |\n",
       "\n",
-      "* there is an implicit leading bit of 1 and the binary point before fraction bits\n",
-      "* the 0 and max exponent has special interpretations, such as NaN or Inf"
+      "* an implicit leading bit of 1 and the binary point before fraction bits\n",
+      "* 0 and max exponent reserved for special interpretations: 0, NaN, Inf etc."
      ]
     },
     {
